# docs/swagger.yaml
@@ -123,8 +123,6 @@ definitions:
     type: object
 info:
   contact: {}
-  description: Courier Service for Food Delivery Application
-  title: Courier Service
 paths:
   /courier:
     post:
@@ -183,6 +181,34 @@ paths:
           schema:
             type: string
       summary: getCourier
+      tags:
+      - Courier
+    put:
+      consumes:
+      - application/json
+      description: put courier status by courier ID
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: changeCourierStatus
       tags:
       - Courier
   /couriers:
@@ -578,6 +604,80 @@ paths:
           schema:
             type: string
       summary: GetCourierCompletedOrders
+      tags:
+      - order
+  /orders/service/completed:
+    get:
+      description: get list of completed orders by courier service id
+      parameters:
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: iddeliveryservice
+        in: query
+        name: iddeliveryservice
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.listShortOrders'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: GetAllCompletedOrdersOfCourierService
+      tags:
+      - order
+  /orders/service/completed/bydate:
+    get:
+      description: get list of completed orders by courier service id sorted bu date
+      parameters:
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: iddeliveryservice
+        in: query
+        name: iddeliveryservice
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.listShortOrders'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: GetAllCompletedOrdersOfCourierServiceByDate
       tags:
       - order
 swagger: "2.0"
